# skipi-onboard

./: .gitignore  AGENTS.md  README.md  package-lock.json  presence-manifest.json
.github/workflows/: release.yml  skipi-guard.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: apps_launcher_harness.mjs  build_provenance_harness.mjs  crew_pairing_code_harness.mjs  crew_roster_main_harness.mjs  csp_inline_handlers_harness.mjs  inbox_host_harness.mjs  myvessel_harness.mjs  onboard_presence_contract_harness.mjs  operations_host_harness.mjs  plugin_isolation_harness.mjs  settings_standard_harness.mjs  transmed_bundle_harness.mjs
